# multimodal_rag

./: .env.example  .gitignore  1veritasium_videos.csv  README.md  create_embeddings.py  download_youtube_videos.py  main.py  pipeline.py  pyproject.toml  rag.py  rag_interface.py  repo-structure.md  requirements.txt  test.py
configs/: channel_config.yaml  config.yaml  settings.py
core/: interface.py  rag.py  vectorstore_manager.py
core/query_decomposition/: query.py
core/retreivers/: hierarchical_retreiver.py
core/text_processor/: base_splitter.py  simple_splitter.py  text_splitter.py
images/: ascii.ans
models/: embeddings.py
processing/: text_splitter.py
prompts/: prompts.py
query_decomposition/: query.py
retreival/: hierarchical_retreiver.py  retreiver.py
utils/: general.py  generate_video_frame.py  helper.py  process_captions.py
vectorstore/: manager.py
