[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "numpy>=2.3.1",
    "openai-clip>=1.0.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
