[project]
name = "multimodal-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "google-api-python-client>=2.177.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "numpy>=2.3.1",
    "openai-clip>=1.0.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "yt-dlp>=2025.7.21",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
